<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/ic_header">

        <ImageView
            android:id="@+id/btn_backtologin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/ic_header_back"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:paddingTop="4dp"
            android:textSize="18sp"
            android:layout_marginStart="25dp"
            android:textColor="#FFFFFF"
            android:text="@string/Reg"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <EditText
            android:id="@+id/edt_reguser"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:textSize="14sp"
            android:inputType="text"
            android:backgroundTint="#808284"
            android:hint="@string/username"/>

        <EditText
            android:id="@+id/edt_regmail"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:inputType="textEmailAddress"
            android:backgroundTint="#808284"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/edt_regphone"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:inputType="phone"
            android:backgroundTint="#808284"
            android:hint="Phone Number"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:layout_marginStart="15dp"
            android:gravity="center"
            android:weightSum="10">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="5"
                android:textSize="14sp"
                android:textColor="#808284"
                android:buttonTint="#40B4E7"
                android:text="Male"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="5"
                android:textSize="14sp"
                android:buttonTint="#808284"
                android:textColor="#40B4E7"
                android:text="Female"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:weightSum="1"
            android:orientation="horizontal">
            <Spinner
                android:id="@+id/S_blood"
                android:layout_width="fill_parent"
                android:layout_height="25dp"
                android:entries="@array/bloodtype"
                android:layout_weight="0.5"/>
            <Spinner
                android:id="@+id/S_rhesus"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:textSize="14sp"
                android:entries="@array/rhesus"
                android:layout_weight="0.5"/>
        </LinearLayout>

        <EditText
            android:id="@+id/edt_regpass"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:backgroundTint="#808284"
            android:hint="@string/password"/>
        <EditText
            android:id="@+id/edt_regrepass"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#808284"
            android:textSize="14sp"
            android:hint="@string/retype_password"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:layout_marginStart="13dp"
            android:weightSum="10">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textSize="14sp"
                android:layout_weight="5"
                android:textColor="#808284"
                android:buttonTint="#40B4E7"
                android:text="@string/personal"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textSize="14sp"
                android:buttonTint="#40B4E7"
                android:layout_weight="5"
                android:textColor="#808284"
                android:text="@string/organization"/>
        </RadioGroup>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="15dp"
            android:textSize="14sp"
            android:entries="@array/job"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:backgroundTint="#808284"
            android:hint="@string/home_address"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:backgroundTint="#808284"
            android:hint="@string/default_location"
            android:drawableEnd="@drawable/ic_blood_needed_location"/>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="25dp"
            android:textColor="#808284"
            android:buttonTint="#40B4E7"
            android:text="@string/terms"/>
        <Button
            android:id="@+id/btn_Register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textColor="#40B4E7"
            android:text="@string/register_caps"
            android:background="@drawable/custombutton2"/>
    </LinearLayout>


</LinearLayout>

