<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="#40B4E7">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logoapp"
            android:layout_width="160dp"
            android:layout_height="130dp"
            android:layout_marginTop="120dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_welcome_logo"/>

        <EditText
            android:id="@+id/edt_Username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="text"
            android:hint="@string/username"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:backgroundTint="#FFFFFF"/>

        <EditText
            android:id="@+id/edt_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:backgroundTint="#FFFFFF"/>

        <Button
            android:id="@+id/btn_Login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:background="@drawable/custombutton1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="OR"
            android:gravity="center"
            android:textColor="#FFFFFF"/>

        <Button
            android:id="@+id/btn_FB"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:paddingLeft="50dp"
            android:drawableStart="@drawable/ic_welcome_fb_login"
            android:text="@string/connect_with_facebook"
            android:background="@drawable/custombutton1"
            android:textColor="#FFFFFF"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/doesn_t_have_account"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/btn_Register"
                android:onClick="OnClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingLeft="5dp"
                android:text="@string/register"
                android:textColor="#FFFFFF"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>